--- a/angular-cli-bibliotecas-externas/angular.json
+++ b/angular-cli-bibliotecas-externas/angular.json
@@ -23,9 +23,17 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/materialize-css/dist/css/materialize.css",
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/jquery/dist/jquery.js",  
+              "node_modules/popper.js/dist/umd/popper.min.js",  
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/hammerjs/hammer.js",
+              "node_modules/materialize-css/dist/js/materialize.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
