--- a/angular-cli-bibliotecas-externas/package.json
+++ b/angular-cli-bibliotecas-externas/package.json
@@ -19,7 +19,16 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@types/lodash": "^4.14.120",
+    "ajv": "^6.8.1",
+    "angular2-materialize": "^15.1.10",
+    "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
+    "jquery": "^2.2.4",
+    "lodash": "^4.17.11",
+    "materialize-css": "^1.0.0",
+    "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
